Aligned footer heading and logi issue #15

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ img.resize {
 
 #flex-footer-el-1 {
   
-
+text-align : center
 }
 
 #flex-footer-el-1 div {
